--- a/package.json
+++ b/package.json
@@ -5,8 +5,5 @@
   "main": "server.js",
   "repository": "https://github.com/amanjagdev/quote-day.git",
   "author": "Aman Jagdev",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "license": "MIT"
 }
